[ms-4010] Issues fixes and dark mode added (#48)
* [ms-4010] Update react-scripts

* [ms-4010] Upgrade React to 18

* [ms-4010] Run husky on commit

* [ms-4010] Run husky on commit

* [ms-4010] Update copyright date

* [ms-4010] Remove enzyme test

* [ms-4010] Add dark mode

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -4,3 +4,5 @@ $gray: #e0e0e0;
 $dark-gray: #9b9b9b;
 $light-gray: #9e9e9e;
 $lighter-gray: #e2e2e2;
+$blue: #0099e0;
+$mud: #4d4d4d;
